fix for quote container on mobile

--- a/css/576.css
+++ b/css/576.css
@@ -3,6 +3,11 @@
     font-size: 6px;
   }
 
+  h2 {
+  	width: 75vw;
+  	margin: auto;
+  }
+
   .general_text {
     line-height: 26px;
   }
@@ -13,6 +18,10 @@
 
 	.helpful_content p {
 	  font-size: 3.14rem;
+	}
+
+	#what_do_our_clients_say .client_container {
+		min-width: 75vw;
 	}
 
 	.client_content p {
